hphp/hack/test/typecheck/control_flow/while_undefined.php.exp
File "while_undefined.php", line 7, characters 8-9:
Variable $x is undefined, or not always defined (Naming[2050])
