hphp/hack/test/typecheck/control_flow/while_undefined.php
<?hh

function f(): void {
  while (false) {
    $x = 10;
  }
  echo $x;
}
